Ensure index.html and logos are correctly placed for Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
-    "version": 2,
-    "routes": [
-      { "src": "/api/chat", "dest": "/api.js" }
-    ]
-  }  
+  "version": 2,
+  "routes": [
+    { "src": "/api/chat", "dest": "/api/chat.js" },
+    { "src": "/", "dest": "/index.html" },
+    { "src": "/(.*)", "dest": "/index.html" }
+  ]
+}
