--- a/package.json
+++ b/package.json
@@ -1,23 +1,12 @@
 {
   "name": "appalachian-dental-chatbot",
   "version": "1.0.0",
-  "main": "script.js",
+  "description": "AI chatbot for Appalachian Dental built by Sphere AI",
+  "main": "api/chat.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node api/chat.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Sphereai-chatbots/appalachian-dental-chatbot99.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Sphereai-chatbots/appalachian-dental-chatbot99/issues"
-  },
-  "homepage": "https://github.com/Sphereai-chatbots/appalachian-dental-chatbot99#readme",
-  "description": "",
   "dependencies": {
-    "openai": "^4.90.0"
+    "openai": "^4.30.0"
   }
 }
