--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,6 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "index.html", "use": "@vercel/static" }
-  ],
   "routes": [
-    { "src": "/api/chat", "dest": "/api/chat.js" },
-    { "src": "/", "dest": "/index.html" }
+    { "src": "/api/chat", "dest": "/api/chat.js" }
   ]
 }
